--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - db.env
     depends_on:
       - database
+      - prometheus
+      - grafana
     healthcheck:
       test: mysqladmin ping -h 127.0.0.1 -u $$DB_USERNAME --password=$$DB_PASSWORD
       interval: 1m30s
@@ -32,6 +34,12 @@ services:
       - "3307:3306"
     restart: always
   
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    restart: always
+  
   nginx:
     image: nginx:latest
     ports:
@@ -40,6 +48,44 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - proxy_app
+  
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    links:
+      - mysql_exporter
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana-enterprise
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - '3000:3000'
+    volumes:
+      - grafana-storage:/var/lib/grafana
+  
+  # tool to connect to mysql instance, and allow prometheus to collect mysql stats
+  mysql_exporter:
+    image: prom/mysqld-exporter
+    links:
+      - database
+    ports:
+      - '9104:9104'
+    depends_on:
+      - database
+    environment:
+      - DATA_SOURCE_NAME="meli_user:meli_password@database:3306/meli_stats"
+    command: /bin/mysqld_exporter collect.binlog_size=true collect.info_schema.processlist=true
+    networks:
+      - prometheus_mysql_exporter
 
 volumes:
   database_data:
+  grafana-storage:
+
+networks:
+  prometheus_mysql_exporter:
+    internal: true
