--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,29 @@
 # nginx.conf
 # Configuración del servidor web inverso para el proxy
 
+
 server {
     listen 80;
+    limit_conn addr 5;
 
     location /proxy/ {
+
+        # Configuración de límites de tasa
+        limit_req zone=rate_limit_zone burst=20 nodelay;
+
+        # Configuración de límites de conexiones
+        limit_conn conn_limit_zone 10;
+
+        # Filtrado de solicitudes maliciosas:
+        if ($http_user_agent ~* "malicious") {
+                return 403;
+        }
+
+        # Configuración timeouts:
+        client_body_timeout 10s;
+        client_header_timeout 10s;
+        send_timeout 10s;
+        
         proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -15,5 +34,4 @@ server {
 
 # Configuración de límites de tasa
 limit_req_zone $binary_remote_addr zone=proxy_rate_limit:10m rate=50000r/s;
-
-
+limit_conn_zone $binary_remote_addr zone=addr:10m;
