--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,10 +9,10 @@ server {
     location /proxy/ {
 
         # Configuración de límites de tasa
-        limit_req zone=rate_limit_zone burst=20 nodelay;
+        limit_req zone=proxy_rate_limit burst=20 nodelay;
 
         # Configuración de límites de conexiones
-        limit_conn conn_limit_zone 10;
+        limit_conn addr 10;
 
         # Filtrado de solicitudes maliciosas:
         if ($http_user_agent ~* "malicious") {
@@ -20,9 +20,9 @@ server {
         }
 
         # Configuración timeouts:
-        client_body_timeout 10s;
-        client_header_timeout 10s;
-        send_timeout 10s;
+        # client_body_timeout 10s;
+        # client_header_timeout 10s;
+        # send_timeout 10s;
         
         proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host $host;
