--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,28 +6,67 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    # depends_on:
-      # - prometheus
-    ports:
-      - "8000:8000"
-    command: sh -c "uvicorn app.main:app --reload --port=8000 --host=0.0.0.0"
-    env_file:
-      - .env
-      - db.env
     depends_on:
       - database
-      - prometheus
-      - grafana
-    links:
-     - redisdb
-    healthcheck:
-      test: mysqladmin ping -h 127.0.0.1 -u $$DB_USERNAME --password=$$DB_ROOT_PASSWORD
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    restart:  always
+    env_file:
+      - db.env
+      - .env
+    labels:
+      # Enable Traefik for this specific service 
+      - traefik.enable=true
+      # Define de port inside of the Docker service to use
+      - traefik.http.services.app.loadbalancer.server.port=8000
+      # Make Traefik use this domain in HTTP
+      - traefik.http.routers.app-http.entrypoints=http
+      - traefik.http.routers.app-http.rule=Host(`localhost`)
+      # Use the traefik-public network  (declared below)
+      - traefik.docker.network=traefik-public
+    networks:
+      - traefik-public
+    restart: always
   
+  streamlit:
+    build:
+      context: .
+      dockerfile: streamlit.Dockerfile
+    restart: always
+    labels:
+      # Enable Traefik for this specific service 
+      - traefik.enable=true
+      # Define the port inside of the Docker service to use
+      - traefik.http.services.streamlit.loadbalancer.server.port=8000
+      # Make Traefik use this domain in HTTP
+      - traefik.http.routers.streamlit-http.entrypoints=http
+      - traefik.http.routers.streamlit-http.rule=Host(`streamlit.localhost`)
+      # Use the traefik-public network (declared below)
+      - traefik.docker.network=traefik-public
+      # Enable HTTP Basic auth, using the middleware created above
+      - traefik.http.routers.streamlit-http.middlewares=admin-auth
+    networks:
+      - traefik-public
+  
+  panel:
+    build:
+      context: .
+      dockerfile: panel.Dockerfile
+    restart: always
+    environment:
+      - BOKEH_ALLOW_WS_ORIGIN=localhost:8090,panel.localhost
+    labels:
+      # Enable Traefik for this specific service 
+      - traefik.enable=true
+      # Define the port inside of the Docker service to use
+      - traefik.http.services.panel.loadbalancer.server.port=8000
+      # Make Traefik use this domain in HTTP
+      - traefik.http.routers.panel-http.entrypoints=http
+      - traefik.http.routers.panel-http.rule=Host(`panel.localhost`)
+      # Use the traefik-public network (declared below)
+      - traefik.docker.network=traefik-public
+      # Enable HTTP Basic auth, using the middleware created above
+      - traefik.http.routers.panel-http.middlewares=admin-auth
+    networks:
+      - traefik-public
+
   database:
     image: mysql:latest
     container_name: database
@@ -38,6 +77,8 @@ services:
     ports:
       - "3307:3306"
     restart: always
+    networks:
+      - traefik-public
   
   redisdb:
     image: redis:latest
@@ -49,58 +90,13 @@ services:
       - db.env
     volumes: 
       - ./cache:/data
-  
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - proxy_app
-  
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    links:
-      - mysql_exporter
-    depends_on:
-      - database
-      - mysql_exporter
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-
-  grafana:
-    image: grafana/grafana-enterprise
-    container_name: grafana
-    restart: unless-stopped
-    ports:
-      - '3000:3000'
-    volumes:
-      - grafana-storage:/var/lib/grafana
-  
-  # tool to connect to mysql instance, and allow prometheus to collect mysql stats
-  mysql_exporter:
-    image: quay.io/prometheus/mysqld-exporter
-    container_name: mysqld-exporter
-    restart: unless-stopped
-    command:
-     - "--mysqld.username=root:myRootPassword123"
-     - "--mysqld.address=localhost:3306"
     networks:
-      - prometheus_mysql_exporter
-    volumes:
-      - ./.my.cnf:/cfg/.my.cnf
+      - traefik-public
 
 volumes:
   database_data:
-  grafana-storage:
-  redisdb:
-    driver: local
+  cache:
 
 networks:
-  prometheus_mysql_exporter:
-    driver: bridge
+  traefik-public:
+    external: true
